tests/nala/error/assign-void.nl

func returnVoid() {
    const void = 'void';
}

const break = returnVoid();

print(break);